fix(P6): DEF-42 打包版启动失败（Failed to launch JVM）定性轮 —— 取证脚本 + CI 启动冒烟（观察期）
现象（人工门第十轮 TC-MAN-02 步骤 3）：双击安装版图标弹窗「Failed to launch JVM」。

- 现象定位：弹窗由 jpackage 原生启动器产出（≠ Java 异常），语义 = 随包私有运行时未拉起；
  与机器上的 Temurin 21 无关（ADR-006 §1.1：安装版自带私有 JRE）。
- 对照证据（本机）：同一套 jpackage 配置产出的 app-image 实跑成功
  （bootstrap ok | build=0.1.0+8ccdee7 | schema=12；45s 未退出；runtime MODULES 20 个齐全；
  cfg 无 --add-modules；97 条 classpath 全部存在）→ 打包配置本身可启动。
- 候选根因 5 类（非 ASCII 安装路径 / 安全软件删改运行时 / 陈旧并存安装 / 安装时文件被锁 /
  系统 UTF-8 beta 代码页），逐条给出判定证据与绕行办法。

新增/改动：
- scripts/diagnose-packaged-launch.ps1（新增，纯 ASCII）：只读取证 + 可选启动探针，按 5 类根因打判定行。
- docs/test/manual-test-guide.md §16 排查附录（四步快速判定 + 判定表 + 「拷到 ASCII 短路径」绕行）。
- docs/test/defects.md：DEF-42 条目（P1，定性中）+ §0 汇总（合计 42 / P1 现存 1 项未闭环）+ §5 需求回溯。
- docs/test/test-cases.md §7.0、manual-test-guide.md §1.1-1：TC-MAN-02 进展改「阻塞」。
- .github/workflows/ci.yml：package job 末尾新增 Windows 打包版启动冒烟（产物上传之后 +
  continue-on-error 观察期非阻断，判定串 PACKAGED_LAUNCH_SMOKE=PASS/FAIL）——建议 C0，待人工追认。
- docs/dev/STATUS.md：第十轮记录 + 阻塞点更新（P1 未清零 → P6 门暂不可关闭）。

分级建议（待人工拍板）：A = C0（CI 启动冒烟，已先行落地观察期）；B = C1（安装策略调整 +
便携版 zip 产物，决策档顺延 D34）。